# clawdex-cloudflared

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  STATUS.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/mac-host/: Package.swift  README.md  package.json
apps/mac-host/Sources/ClawdexHost/: ClawdexHostApp.swift  CommandRunner.swift  (+5 more)
apps/mac-host/scripts/: prepare-bundled-bridge.sh
apps/mobile/: .env.example  App.tsx  app.json  eas.json  eslint.config.cjs  package.json  tsconfig.json
apps/mobile/plugins/: withAndroidCleartextTraffic.js
apps/mobile/src/: bridgeUrl.ts  config.ts  theme.ts
docs/: app-review-notes.md  codex-app-server-cli-gap-tracker.md  eas-builds.md  open-source-license-requirements.md  privacy-policy.md  realtime-streaming-limitations.md  setup-and-operations.md  terms-of-service.md  troubleshooting.md  voice-transcription.md
docs/plans/: 2026-02-20-codex-desktop-style-redesign.md  2026-02-20-codex-mobile-implementation.md  2026-02-21-codex-ui-redesign-design.md  2026-02-21-codex-ui-redesign.md
scripts/: codex-live-demo.sh  setup-secure-dev.sh  setup-wizard.sh  start-bridge-secure.sh  start-expo.sh  stop-services.sh  sync-versions.js  teardown.sh
services/mac-bridge/: .env.example  eslint.config.cjs  package.json  tsconfig.json  vitest.config.ts
services/mac-bridge/src/: index.ts  server.ts  types.ts
services/rust-bridge/: .env.example  Cargo.toml  package.json  security_best_practices_report.md
services/rust-bridge/src/: main.rs
services/rust-bridge/src/services/: git.rs  mod.rs  terminal.rs
(+39 files in other folders)
